@@ -21,7 +21,7 @@ NEWUSER="${1}"
 PKGNAME="${2}"
 USERSPACE="${3}"
 
-if [[ -z "${3}" || -z "${2}" || -z "${1}" ]] ; then
+if [[ -z "${NEWUSER}" || -z "${PKGNAME}" || -z "${USERSPACE}" ]] ; then
 	echo "Script expects 3 arguments: username pkgname userspace" >&2
 	exit 1
 fi
@@ -77,12 +77,12 @@ then
 		echo -n "We already have a user named ${NEWUSER}." >&2
 		echo " Nothing to do." >&2
 
-		echo "${PKGNAME}" >> "${DBDIR}/users/${NEWUSER}"
+		echo "${PKGNAME}" >> "${DBDIR}/user/${NEWUSER}"
 		exit 0
 	fi
 fi
 
-if [[ -f "${DBDIR}/users/${NEWUSER}" ]] ; then
+if [[ -f "${DBDIR}/user/${NEWUSER}" ]] ; then
 	echo "User ${NEWUSER} was previously added by this script," >&2
 	echo "but it no longer exists on the system. We'll re-add" >&2
 	echo "them now, but you should have used the users-config" >&2
@@ -105,4 +105,4 @@ for i in ${PASSWD_BACKENDS}; do
 done
 
 # Properly update the dynamic users database
-echo "${PKGNAME}" >> "${DBDIR}/users/${NEWUSER}"
+echo "${PKGNAME}" >> "${DBDIR}/user/${NEWUSER}"
